Finishing basic skeleton of the page

--- a/index.html
+++ b/index.html
@@ -59,6 +59,56 @@
     </div>
   </main>
 
+  <!-- Mockups Carousel Section -->
+  <section class="mockups-carousel">
+    <div class="mockups-carousel__container">
+      <!-- Column 1 - scrolls DOWN, 40s -->
+      <div class="mockups-carousel__column mockups-carousel__column--left">
+        <div class="mockups-carousel__column-inner">
+          <img src="mockups/columns/column1/column-1-mockup-1.png" alt="ChopChop app screen" class="mockups-carousel__mockup">
+          <img src="mockups/columns/column1/column-1-mockup-2.png" alt="ChopChop app screen" class="mockups-carousel__mockup">
+          <img src="mockups/columns/column1/column-1-mockup-3.png" alt="ChopChop app screen" class="mockups-carousel__mockup">
+          <img src="mockups/columns/column1/column-1-mockup-1.png" alt="ChopChop app screen" class="mockups-carousel__mockup">
+          <img src="mockups/columns/column1/column-1-mockup-2.png" alt="ChopChop app screen" class="mockups-carousel__mockup">
+          <img src="mockups/columns/column1/column-1-mockup-3.png" alt="ChopChop app screen" class="mockups-carousel__mockup">
+          <img src="mockups/columns/column1/column-1-mockup-1.png" alt="ChopChop app screen" class="mockups-carousel__mockup">
+          <img src="mockups/columns/column1/column-1-mockup-2.png" alt="ChopChop app screen" class="mockups-carousel__mockup">
+          <img src="mockups/columns/column1/column-1-mockup-3.png" alt="ChopChop app screen" class="mockups-carousel__mockup">
+        </div>
+      </div>
+
+      <!-- Column 2 - scrolls UP, 30s (fastest) -->
+      <div class="mockups-carousel__column mockups-carousel__column--center">
+        <div class="mockups-carousel__column-inner">
+          <img src="mockups/columns/column2/column-2-mockup-1.png" alt="ChopChop app screen" class="mockups-carousel__mockup">
+          <img src="mockups/columns/column2/column-2-mockup-2.png" alt="ChopChop app screen" class="mockups-carousel__mockup">
+          <img src="mockups/columns/column2/column-2-mockup-3.png" alt="ChopChop app screen" class="mockups-carousel__mockup">
+          <img src="mockups/columns/column2/column-2-mockup-1.png" alt="ChopChop app screen" class="mockups-carousel__mockup">
+          <img src="mockups/columns/column2/column-2-mockup-2.png" alt="ChopChop app screen" class="mockups-carousel__mockup">
+          <img src="mockups/columns/column2/column-2-mockup-3.png" alt="ChopChop app screen" class="mockups-carousel__mockup">
+          <img src="mockups/columns/column2/column-2-mockup-1.png" alt="ChopChop app screen" class="mockups-carousel__mockup">
+          <img src="mockups/columns/column2/column-2-mockup-2.png" alt="ChopChop app screen" class="mockups-carousel__mockup">
+          <img src="mockups/columns/column2/column-2-mockup-3.png" alt="ChopChop app screen" class="mockups-carousel__mockup">
+        </div>
+      </div>
+
+      <!-- Column 3 - scrolls DOWN, 50s (slowest) -->
+      <div class="mockups-carousel__column mockups-carousel__column--right">
+        <div class="mockups-carousel__column-inner">
+          <img src="mockups/columns/column3/column-3-mockup-1.png" alt="ChopChop app screen" class="mockups-carousel__mockup">
+          <img src="mockups/columns/column3/column-3-mockup-2.png" alt="ChopChop app screen" class="mockups-carousel__mockup">
+          <img src="mockups/columns/column3/column-3-mockup-3.png" alt="ChopChop app screen" class="mockups-carousel__mockup">
+          <img src="mockups/columns/column3/column-3-mockup-1.png" alt="ChopChop app screen" class="mockups-carousel__mockup">
+          <img src="mockups/columns/column3/column-3-mockup-2.png" alt="ChopChop app screen" class="mockups-carousel__mockup">
+          <img src="mockups/columns/column3/column-3-mockup-3.png" alt="ChopChop app screen" class="mockups-carousel__mockup">
+          <img src="mockups/columns/column3/column-3-mockup-1.png" alt="ChopChop app screen" class="mockups-carousel__mockup">
+          <img src="mockups/columns/column3/column-3-mockup-2.png" alt="ChopChop app screen" class="mockups-carousel__mockup">
+          <img src="mockups/columns/column3/column-3-mockup-3.png" alt="ChopChop app screen" class="mockups-carousel__mockup">
+        </div>
+      </div>
+    </div>
+  </section>
+
   <!-- How it Works Section -->
   <section class="how-it-works">
     <div class="how-it-works__container">
@@ -152,8 +202,148 @@
           </div>
         </div>
       </div>
+
+      <!-- No Credit Card Required Feature -->
+      <div class="how-it-works__feature how-it-works__feature--no-card">
+        <h3 class="how-it-works__feature-title">
+          No credit card required
+          <span class="how-it-works__underline"></span>
+        </h3>
+
+        <p class="how-it-works__feature-description">
+          All we need is your IBAN to get you started. Your credit card can stay safely in your wallet.
+        </p>
+
+        <div class="how-it-works__mockups how-it-works__mockups--single">
+          <img src="no-credit-card-required.svg" alt="No credit card required illustration" class="how-it-works__single-img">
+        </div>
+      </div>
+
+      <!-- Use Any Currency Feature -->
+      <div class="how-it-works__feature how-it-works__feature--currency">
+        <h3 class="how-it-works__feature-title">
+          Use any currency
+          <span class="how-it-works__underline"></span>
+        </h3>
+
+        <p class="how-it-works__feature-description">
+          Split bills in euros, dollars, pounds, or any currency your group prefers - we handle the rest.
+        </p>
+
+        <!-- Currency Icons Slider -->
+        <div class="currency-slider">
+          <!-- Slider track -->
+          <div class="currency-slider__track">
+            <!-- First set of icons -->
+            <div class="currency-slider__icon">
+              <img src="currencies/dollar.svg" alt="Dollar" class="currency-slider__icon-img">
+            </div>
+            <div class="currency-slider__icon">
+              <img src="currencies/euro.svg" alt="Euro" class="currency-slider__icon-img">
+            </div>
+            <div class="currency-slider__icon">
+              <img src="currencies/libre.svg" alt="Pound" class="currency-slider__icon-img">
+            </div>
+            <div class="currency-slider__icon">
+              <img src="currencies/turkish-lira.svg" alt="Turkish Lira" class="currency-slider__icon-img">
+            </div>
+            <div class="currency-slider__icon">
+              <img src="currencies/danish-krone.svg" alt="Danish Krone" class="currency-slider__icon-img">
+            </div>
+            <div class="currency-slider__icon">
+              <img src="currencies/swiss-franc.svg" alt="Swiss Franc" class="currency-slider__icon-img">
+            </div>
+
+            <!-- Duplicate set for seamless loop -->
+            <div class="currency-slider__icon">
+              <img src="currencies/dollar.svg" alt="Dollar" class="currency-slider__icon-img">
+            </div>
+            <div class="currency-slider__icon">
+              <img src="currencies/euro.svg" alt="Euro" class="currency-slider__icon-img">
+            </div>
+            <div class="currency-slider__icon">
+              <img src="currencies/libre.svg" alt="Pound" class="currency-slider__icon-img">
+            </div>
+            <div class="currency-slider__icon">
+              <img src="currencies/turkish-lira.svg" alt="Turkish Lira" class="currency-slider__icon-img">
+            </div>
+            <div class="currency-slider__icon">
+              <img src="currencies/danish-krone.svg" alt="Danish Krone" class="currency-slider__icon-img">
+            </div>
+            <div class="currency-slider__icon">
+              <img src="currencies/swiss-franc.svg" alt="Swiss Franc" class="currency-slider__icon-img">
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Use for Any Occassion Feature -->
+      <div class="how-it-works__feature how-it-works__feature--occassions">
+        <h3 class="how-it-works__feature-title">
+          Use for any occassion
+          <span class="how-it-works__underline"></span>
+        </h3>
+
+        <!-- Cards Grid -->
+        <div class="occassion-cards">
+          <!-- Card 1 - Trip -->
+          <div class="occassion-cards__card">
+            <div class="occassion-cards__icon-wrapper">
+              <img src="paperplane.svg" alt="Going on a trip" class="occassion-cards__icon">
+            </div>
+            <h4 class="occassion-cards__card-title">Going on a trip</h4>
+            <p class="occassion-cards__card-description">
+              Planning a vacation with friends? ChopChop tracks every shared expense. Focus on making memories, not doing math.
+            </p>
+          </div>
+
+          <!-- Card 2 - Night Out -->
+          <div class="occassion-cards__card">
+            <div class="occassion-cards__icon-wrapper">
+              <img src="wine-glass.svg" alt="Night out" class="occassion-cards__icon">
+            </div>
+            <h4 class="occassion-cards__card-title">Splitting after night out</h4>
+            <p class="occassion-cards__card-description">
+              Drinks, appetizers, split cabs—night outs add up fast. Log expenses quickly and settle up without awkward conversations.
+            </p>
+          </div>
+
+          <!-- Card 3 - Shared Housing -->
+          <div class="occassion-cards__card">
+            <div class="occassion-cards__icon-wrapper">
+              <img src="house.svg" alt="Shared housing" class="occassion-cards__icon">
+            </div>
+            <h4 class="occassion-cards__card-title">Shared housing? No problem!</h4>
+            <p class="occassion-cards__card-description">
+              Rent, utilities, groceries—living together means sharing costs. Track everything effortlessly so everyone pays their fair share.
+            </p>
+          </div>
+        </div>
+      </div>
     </div>
   </section>
+
+  <!-- Divider -->
+  <hr class="divider">
+
+  <!-- Footer -->
+  <footer class="footer">
+    <div class="footer__container">
+      <p class="footer__copyright">©2025 ChopChop</p>
+
+      <div class="footer__socials">
+        <a href="#" class="footer__social-link" aria-label="TikTok">
+          <img src="tiktok.svg" alt="TikTok" class="footer__social-icon">
+        </a>
+        <a href="#" class="footer__social-link" aria-label="Instagram">
+          <img src="instagram.svg" alt="Instagram" class="footer__social-icon">
+        </a>
+        <a href="#" class="footer__social-link" aria-label="X (Twitter)">
+          <img src="x.svg" alt="X" class="footer__social-icon">
+        </a>
+      </div>
+    </div>
+  </footer>
 
   <script src="script.js"></script>
 </body>
