Updating icons paths + mockups-carousel__columns for desktopversion

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
   <!-- Header -->
   <header class="header">
     <div class="header__container">
-      <img src="logo.png" alt="ChopChop logo" class="header__logo">
+      <img src="icons/logo.png" alt="ChopChop logo" class="header__logo">
       <button class="header__menu-btn" aria-label="Open menu" aria-expanded="false">
-        <img src="hamburger-menu.svg" alt="" class="header__menu-icon">
+        <img src="icons/hamburger-menu.svg" alt="" class="header__menu-icon">
       </button>
     </div>
   </header>
@@ -22,9 +22,9 @@
   <div class="menu-overlay" aria-hidden="true">
     <div class="menu-overlay__content">
       <div class="menu-overlay__header">
-        <img src="logo.png" alt="ChopChop logo" class="menu-overlay__logo">
+        <img src="icons/logo.png" alt="ChopChop logo" class="menu-overlay__logo">
         <button class="menu-overlay__close-btn" aria-label="Close menu">
-          <img src="close.svg" alt="" class="menu-overlay__close-icon">
+          <img src="icons/close.svg" alt="" class="menu-overlay__close-icon">
         </button>
       </div>
       <!-- Navigation items can be added here in the future -->
@@ -37,7 +37,7 @@
   <!-- Hero Section -->
   <main class="hero">
     <div class="hero__container">
-      <img src="app-icon.png" alt="ChopChop app icon" class="hero__app-icon">
+      <img src="icons/app-icon.png" alt="ChopChop app icon" class="hero__app-icon">
 
       <h1 class="hero__headline">Splitting bills, made simple</h1>
 
@@ -47,13 +47,13 @@
 
       <div class="hero__download-buttons">
         <a href="#" class="hero__download-link" aria-label="Download on the App Store">
-          <img src="app-store.png" alt="Download on the App Store" class="hero__download-img">
+          <img src="icons/app-store.png" alt="Download on the App Store" class="hero__download-img">
         </a>
 
         <p class="hero__download-divider">or</p>
 
         <a href="#" class="hero__download-link" aria-label="Get it on Google Play">
-          <img src="google-play.png" alt="Get it on Google Play" class="hero__download-img">
+          <img src="icons/google-play.png" alt="Get it on Google Play" class="hero__download-img">
         </a>
       </div>
     </div>
@@ -104,6 +104,96 @@
           <img src="mockups/columns/column3/column-3-mockup-1.png" alt="ChopChop app screen" class="mockups-carousel__mockup">
           <img src="mockups/columns/column3/column-3-mockup-2.png" alt="ChopChop app screen" class="mockups-carousel__mockup">
           <img src="mockups/columns/column3/column-3-mockup-3.png" alt="ChopChop app screen" class="mockups-carousel__mockup">
+        </div>
+      </div>
+
+      <!-- Column 4 - scrolls UP -->
+      <div class="mockups-carousel__column mockups-carousel__column--4">
+        <div class="mockups-carousel__column-inner">
+          <img src="mockups/columns/column2/column-2-mockup-2.png" alt="ChopChop app screen" class="mockups-carousel__mockup">
+          <img src="mockups/columns/column1/column-1-mockup-1.png" alt="ChopChop app screen" class="mockups-carousel__mockup">
+          <img src="mockups/columns/column3/column-3-mockup-3.png" alt="ChopChop app screen" class="mockups-carousel__mockup">
+          <img src="mockups/columns/column2/column-2-mockup-2.png" alt="ChopChop app screen" class="mockups-carousel__mockup">
+          <img src="mockups/columns/column1/column-1-mockup-1.png" alt="ChopChop app screen" class="mockups-carousel__mockup">
+          <img src="mockups/columns/column3/column-3-mockup-3.png" alt="ChopChop app screen" class="mockups-carousel__mockup">
+          <img src="mockups/columns/column2/column-2-mockup-2.png" alt="ChopChop app screen" class="mockups-carousel__mockup">
+          <img src="mockups/columns/column1/column-1-mockup-1.png" alt="ChopChop app screen" class="mockups-carousel__mockup">
+          <img src="mockups/columns/column3/column-3-mockup-3.png" alt="ChopChop app screen" class="mockups-carousel__mockup">
+        </div>
+      </div>
+
+      <!-- Column 5 - scrolls DOWN -->
+      <div class="mockups-carousel__column mockups-carousel__column--5">
+        <div class="mockups-carousel__column-inner">
+          <img src="mockups/columns/column1/column-1-mockup-3.png" alt="ChopChop app screen" class="mockups-carousel__mockup">
+          <img src="mockups/columns/column2/column-2-mockup-1.png" alt="ChopChop app screen" class="mockups-carousel__mockup">
+          <img src="mockups/columns/column3/column-3-mockup-2.png" alt="ChopChop app screen" class="mockups-carousel__mockup">
+          <img src="mockups/columns/column1/column-1-mockup-3.png" alt="ChopChop app screen" class="mockups-carousel__mockup">
+          <img src="mockups/columns/column2/column-2-mockup-1.png" alt="ChopChop app screen" class="mockups-carousel__mockup">
+          <img src="mockups/columns/column3/column-3-mockup-2.png" alt="ChopChop app screen" class="mockups-carousel__mockup">
+          <img src="mockups/columns/column1/column-1-mockup-3.png" alt="ChopChop app screen" class="mockups-carousel__mockup">
+          <img src="mockups/columns/column2/column-2-mockup-1.png" alt="ChopChop app screen" class="mockups-carousel__mockup">
+          <img src="mockups/columns/column3/column-3-mockup-2.png" alt="ChopChop app screen" class="mockups-carousel__mockup">
+        </div>
+      </div>
+
+      <!-- Column 6 - scrolls UP -->
+      <div class="mockups-carousel__column mockups-carousel__column--6">
+        <div class="mockups-carousel__column-inner">
+          <img src="mockups/columns/column3/column-3-mockup-1.png" alt="ChopChop app screen" class="mockups-carousel__mockup">
+          <img src="mockups/columns/column1/column-1-mockup-2.png" alt="ChopChop app screen" class="mockups-carousel__mockup">
+          <img src="mockups/columns/column2/column-2-mockup-3.png" alt="ChopChop app screen" class="mockups-carousel__mockup">
+          <img src="mockups/columns/column3/column-3-mockup-1.png" alt="ChopChop app screen" class="mockups-carousel__mockup">
+          <img src="mockups/columns/column1/column-1-mockup-2.png" alt="ChopChop app screen" class="mockups-carousel__mockup">
+          <img src="mockups/columns/column2/column-2-mockup-3.png" alt="ChopChop app screen" class="mockups-carousel__mockup">
+          <img src="mockups/columns/column3/column-3-mockup-1.png" alt="ChopChop app screen" class="mockups-carousel__mockup">
+          <img src="mockups/columns/column1/column-1-mockup-2.png" alt="ChopChop app screen" class="mockups-carousel__mockup">
+          <img src="mockups/columns/column2/column-2-mockup-3.png" alt="ChopChop app screen" class="mockups-carousel__mockup">
+        </div>
+      </div>
+
+      <!-- Column 7 - scrolls DOWN -->
+      <div class="mockups-carousel__column mockups-carousel__column--7">
+        <div class="mockups-carousel__column-inner">
+          <img src="mockups/columns/column2/column-2-mockup-3.png" alt="ChopChop app screen" class="mockups-carousel__mockup">
+          <img src="mockups/columns/column3/column-3-mockup-1.png" alt="ChopChop app screen" class="mockups-carousel__mockup">
+          <img src="mockups/columns/column1/column-1-mockup-2.png" alt="ChopChop app screen" class="mockups-carousel__mockup">
+          <img src="mockups/columns/column2/column-2-mockup-3.png" alt="ChopChop app screen" class="mockups-carousel__mockup">
+          <img src="mockups/columns/column3/column-3-mockup-1.png" alt="ChopChop app screen" class="mockups-carousel__mockup">
+          <img src="mockups/columns/column1/column-1-mockup-2.png" alt="ChopChop app screen" class="mockups-carousel__mockup">
+          <img src="mockups/columns/column2/column-2-mockup-3.png" alt="ChopChop app screen" class="mockups-carousel__mockup">
+          <img src="mockups/columns/column3/column-3-mockup-1.png" alt="ChopChop app screen" class="mockups-carousel__mockup">
+          <img src="mockups/columns/column1/column-1-mockup-2.png" alt="ChopChop app screen" class="mockups-carousel__mockup">
+        </div>
+      </div>
+
+      <!-- Column 8 - scrolls UP -->
+      <div class="mockups-carousel__column mockups-carousel__column--8">
+        <div class="mockups-carousel__column-inner">
+          <img src="mockups/columns/column1/column-1-mockup-1.png" alt="ChopChop app screen" class="mockups-carousel__mockup">
+          <img src="mockups/columns/column3/column-3-mockup-2.png" alt="ChopChop app screen" class="mockups-carousel__mockup">
+          <img src="mockups/columns/column2/column-2-mockup-1.png" alt="ChopChop app screen" class="mockups-carousel__mockup">
+          <img src="mockups/columns/column1/column-1-mockup-1.png" alt="ChopChop app screen" class="mockups-carousel__mockup">
+          <img src="mockups/columns/column3/column-3-mockup-2.png" alt="ChopChop app screen" class="mockups-carousel__mockup">
+          <img src="mockups/columns/column2/column-2-mockup-1.png" alt="ChopChop app screen" class="mockups-carousel__mockup">
+          <img src="mockups/columns/column1/column-1-mockup-1.png" alt="ChopChop app screen" class="mockups-carousel__mockup">
+          <img src="mockups/columns/column3/column-3-mockup-2.png" alt="ChopChop app screen" class="mockups-carousel__mockup">
+          <img src="mockups/columns/column2/column-2-mockup-1.png" alt="ChopChop app screen" class="mockups-carousel__mockup">
+        </div>
+      </div>
+
+      <!-- Column 9 - scrolls DOWN -->
+      <div class="mockups-carousel__column mockups-carousel__column--9">
+        <div class="mockups-carousel__column-inner">
+          <img src="mockups/columns/column3/column-3-mockup-2.png" alt="ChopChop app screen" class="mockups-carousel__mockup">
+          <img src="mockups/columns/column1/column-1-mockup-3.png" alt="ChopChop app screen" class="mockups-carousel__mockup">
+          <img src="mockups/columns/column2/column-2-mockup-2.png" alt="ChopChop app screen" class="mockups-carousel__mockup">
+          <img src="mockups/columns/column3/column-3-mockup-2.png" alt="ChopChop app screen" class="mockups-carousel__mockup">
+          <img src="mockups/columns/column1/column-1-mockup-3.png" alt="ChopChop app screen" class="mockups-carousel__mockup">
+          <img src="mockups/columns/column2/column-2-mockup-2.png" alt="ChopChop app screen" class="mockups-carousel__mockup">
+          <img src="mockups/columns/column3/column-3-mockup-2.png" alt="ChopChop app screen" class="mockups-carousel__mockup">
+          <img src="mockups/columns/column1/column-1-mockup-3.png" alt="ChopChop app screen" class="mockups-carousel__mockup">
+          <img src="mockups/columns/column2/column-2-mockup-2.png" alt="ChopChop app screen" class="mockups-carousel__mockup">
         </div>
       </div>
     </div>
@@ -215,7 +305,7 @@
         </p>
 
         <div class="how-it-works__mockups how-it-works__mockups--single">
-          <img src="no-credit-card-required.svg" alt="No credit card required illustration" class="how-it-works__single-img">
+          <img src="icons/no-credit-card-required.svg" alt="No credit card required illustration" class="how-it-works__single-img">
         </div>
       </div>
 
@@ -236,42 +326,42 @@
           <div class="currency-slider__track">
             <!-- First set of icons -->
             <div class="currency-slider__icon">
-              <img src="currencies/dollar.svg" alt="Dollar" class="currency-slider__icon-img">
+              <img src="icons/currencies/dollar.svg" alt="Dollar" class="currency-slider__icon-img">
             </div>
             <div class="currency-slider__icon">
-              <img src="currencies/euro.svg" alt="Euro" class="currency-slider__icon-img">
+              <img src="icons/currencies/euro.svg" alt="Euro" class="currency-slider__icon-img">
             </div>
             <div class="currency-slider__icon">
-              <img src="currencies/libre.svg" alt="Pound" class="currency-slider__icon-img">
+              <img src="icons/currencies/libre.svg" alt="Pound" class="currency-slider__icon-img">
             </div>
             <div class="currency-slider__icon">
-              <img src="currencies/turkish-lira.svg" alt="Turkish Lira" class="currency-slider__icon-img">
+              <img src="icons/currencies/turkish-lira.svg" alt="Turkish Lira" class="currency-slider__icon-img">
             </div>
             <div class="currency-slider__icon">
-              <img src="currencies/danish-krone.svg" alt="Danish Krone" class="currency-slider__icon-img">
+              <img src="icons/currencies/danish-krone.svg" alt="Danish Krone" class="currency-slider__icon-img">
             </div>
             <div class="currency-slider__icon">
-              <img src="currencies/swiss-franc.svg" alt="Swiss Franc" class="currency-slider__icon-img">
+              <img src="icons/currencies/swiss-franc.svg" alt="Swiss Franc" class="currency-slider__icon-img">
             </div>
 
             <!-- Duplicate set for seamless loop -->
             <div class="currency-slider__icon">
-              <img src="currencies/dollar.svg" alt="Dollar" class="currency-slider__icon-img">
+              <img src="icons/currencies/dollar.svg" alt="Dollar" class="currency-slider__icon-img">
             </div>
             <div class="currency-slider__icon">
-              <img src="currencies/euro.svg" alt="Euro" class="currency-slider__icon-img">
+              <img src="icons/currencies/euro.svg" alt="Euro" class="currency-slider__icon-img">
             </div>
             <div class="currency-slider__icon">
-              <img src="currencies/libre.svg" alt="Pound" class="currency-slider__icon-img">
+              <img src="icons/currencies/libre.svg" alt="Pound" class="currency-slider__icon-img">
             </div>
             <div class="currency-slider__icon">
-              <img src="currencies/turkish-lira.svg" alt="Turkish Lira" class="currency-slider__icon-img">
+              <img src="icons/currencies/turkish-lira.svg" alt="Turkish Lira" class="currency-slider__icon-img">
             </div>
             <div class="currency-slider__icon">
-              <img src="currencies/danish-krone.svg" alt="Danish Krone" class="currency-slider__icon-img">
+              <img src="icons/currencies/danish-krone.svg" alt="Danish Krone" class="currency-slider__icon-img">
             </div>
             <div class="currency-slider__icon">
-              <img src="currencies/swiss-franc.svg" alt="Swiss Franc" class="currency-slider__icon-img">
+              <img src="icons/currencies/swiss-franc.svg" alt="Swiss Franc" class="currency-slider__icon-img">
             </div>
           </div>
         </div>
@@ -289,7 +379,7 @@
           <!-- Card 1 - Trip -->
           <div class="occassion-cards__card">
             <div class="occassion-cards__icon-wrapper">
-              <img src="paperplane.svg" alt="Going on a trip" class="occassion-cards__icon">
+              <img src="icons/paperplane.svg" alt="Going on a trip" class="occassion-cards__icon">
             </div>
             <h4 class="occassion-cards__card-title">Going on a trip</h4>
             <p class="occassion-cards__card-description">
@@ -300,7 +390,7 @@
           <!-- Card 2 - Night Out -->
           <div class="occassion-cards__card">
             <div class="occassion-cards__icon-wrapper">
-              <img src="wine-glass.svg" alt="Night out" class="occassion-cards__icon">
+              <img src="icons/wine-glass.svg" alt="Night out" class="occassion-cards__icon">
             </div>
             <h4 class="occassion-cards__card-title">Splitting after night out</h4>
             <p class="occassion-cards__card-description">
@@ -311,7 +401,7 @@
           <!-- Card 3 - Shared Housing -->
           <div class="occassion-cards__card">
             <div class="occassion-cards__icon-wrapper">
-              <img src="house.svg" alt="Shared housing" class="occassion-cards__icon">
+              <img src="icons/house.svg" alt="Shared housing" class="occassion-cards__icon">
             </div>
             <h4 class="occassion-cards__card-title">Shared housing? No problem!</h4>
             <p class="occassion-cards__card-description">
@@ -333,13 +423,13 @@
 
       <div class="footer__socials">
         <a href="#" class="footer__social-link" aria-label="TikTok">
-          <img src="tiktok.svg" alt="TikTok" class="footer__social-icon">
+          <img src="icons/tiktok.svg" alt="TikTok" class="footer__social-icon">
         </a>
         <a href="#" class="footer__social-link" aria-label="Instagram">
-          <img src="instagram.svg" alt="Instagram" class="footer__social-icon">
+          <img src="icons/instagram.svg" alt="Instagram" class="footer__social-icon">
         </a>
         <a href="#" class="footer__social-link" aria-label="X (Twitter)">
-          <img src="x.svg" alt="X" class="footer__social-icon">
+          <img src="icons/x.svg" alt="X" class="footer__social-icon">
         </a>
       </div>
     </div>
